--- a/Core_Week_2_Independent_Project.ipynb
+++ b/Core_Week_2_Independent_Project.ipynb
@@ -6,7 +6,7 @@
       "name": "Core_Week_2_Independent_Project",
       "provenance": [],
       "mount_file_id": "1K5Gys8efNbjhk_kQa4-8VT34ifRKW4zz",
-      "authorship_tag": "ABX9TyOYgF9ijHQmuOKjZsgNsxA6",
+      "authorship_tag": "ABX9TyOq2HqtKsozVTOU7FMOnGjg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3777,7 +3777,7 @@
         "colab_type": "text"
       },
       "source": [
-        "From the above we have made a model that can predict with 98.03 accurracy if an individual will have a bank account or not "
+        "From the above we have made a model that can predict with 98.03 accurracy on data it has seen if an individual will have a bank account or not "
       ]
     },
     {
@@ -3788,6 +3788,43 @@
       },
       "source": [
         "I dont understand alot in this .... I am just but a biginner ...But i will sure revisit this to correct my mistakes and maybe improve the model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5Mb4wVaLTviu",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "785ba5fa-af6b-4d2d-f722-1a76aaaf468e"
+      },
+      "source": [
+        "rd.predict(X_test)\n",
+        "RdForestperfmce = round(rd.score(X_test, y_test) * 100, 2)\n",
+        "print(\"Accuracy with Random Forest : {}\".format(RdForestperfmce))"
+      ],
+      "execution_count": 193,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Accuracy with Random Forest : 86.04\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8SS2XlYTUiXf",
+        "colab_type": "text"
+      },
+      "source": [
+        "the Accurancy drops to 86.03 on data it has not seen "
       ]
     }
   ]
