--- a/Week_3_IP.ipynb
+++ b/Week_3_IP.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Week_3_IP",
       "provenance": [],
-      "authorship_tag": "ABX9TyMFFp8l9dXkbfJ8hY8fGU4g",
+      "authorship_tag": "ABX9TyMHmROXrLnbCDl17vCshyom",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
         "Detroit City archives are  contain records of city occurrences such as Police briefing Meetings since 1975, Property Sales in the city since 1975 and many more Records.  These records are made and mainatined by  different \n",
         "depatments. In our study we are going to use records from the Mayors office.\n",
         "\n",
-        "Our sample is designed to try and to try and understand the sales of proprty withing the city in different quatres of the year."
+        "Our sample is designed to try and to try and understand the sales of property withing the city in different quatres of the year."
       ]
     },
     {
