--- a/Week_3_IP.ipynb
+++ b/Week_3_IP.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Week_3_IP",
       "provenance": [],
-      "authorship_tag": "ABX9TyMHmROXrLnbCDl17vCshyom",
+      "authorship_tag": "ABX9TyPX8qlFA88EnGUuKdb3PByf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,7 +64,7 @@
         "colab_type": "text"
       },
       "source": [
-        "To achieve "
+        "To achieve the sample desin objective stated above we are going to use stratified sampling. Since our main focus is on the sales of properties  in different quatres of the year. We will use the Sales Month and Year as the strata"
       ]
     },
     {
